; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/davinci/extr_vpif_display.c_vpif_g_priority.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/davinci/extr_vpif_display.c_vpif_g_priority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.vpif_fh = type { %struct.channel_obj* }
%struct.channel_obj = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, i32*)* @vpif_g_priority to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vpif_g_priority(%struct.file* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.vpif_fh*, align 8
  %8 = alloca %struct.channel_obj*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.vpif_fh*
  store %struct.vpif_fh* %10, %struct.vpif_fh** %7, align 8
  %11 = load %struct.vpif_fh*, %struct.vpif_fh** %7, align 8
  %12 = getelementptr inbounds %struct.vpif_fh, %struct.vpif_fh* %11, i32 0, i32 0
  %13 = load %struct.channel_obj*, %struct.channel_obj** %12, align 8
  store %struct.channel_obj* %13, %struct.channel_obj** %8, align 8
  %14 = load %struct.channel_obj*, %struct.channel_obj** %8, align 8
  %15 = getelementptr inbounds %struct.channel_obj, %struct.channel_obj* %14, i32 0, i32 0
  %16 = call i32 @v4l2_prio_max(i32* %15)
  %17 = load i32*, i32** %6, align 8
  store i32 %16, i32* %17, align 4
  ret i32 0
}

declare dso_local i32 @v4l2_prio_max(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
